rpi5/ingress/souin.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: caching
    namespace: kube-system
spec:
    plugin:
        souin:
            log_level: info
            default_cache:
                ttl: 10s
