rpi5/ingress/tls.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: kube-system
spec:
  headers:
    frameDeny: true
    browserXssFilter: true
    stsSeconds: 31536000
