rpi5/ingress/argo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.local`) || Host(`argocd.internal`)
      priority: 10
      middlewares:
        - name: security-headers
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
    - kind: Rule
      match: (Host(`argocd.local`) || Host(`argocd.internal`)) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      middlewares:
        - name: security-headers
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-cert-tls
    domains:
      - main: argocd.local
        sans:
          - argocd.internal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: argocd-server
      port:
        name: http
  tls:
    - hosts:
        - argocd
