rpi5/ingress/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-proxy
  labels:
    app: oauth-proxy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-proxy
  template:
    metadata:
      name: oauth-proxy
      labels:
        app: oauth-proxy
    spec:
      containers:
        - name: oauth-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.7.1@sha256:f6a4aa83a27e316114bf79664302b1ffb2cc8ce697fb479273af4feb3fb16fe3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4180
              protocol: TCP
          readinessProbe:
            httpGet:
              port: 4180
              path: /ping
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-auth
spec:
  selector:
    app: oauth-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4180
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.local`) || Host(`traefik.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: traefik-dashboard-auth
          port: 80
  tls:
    secretName: traefik-dash-cert-tls
    domains:
      - main: traefik.local
        sans:
          - traefik.internal
